--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.4",
+    "web-vitals": "^3.0.4"
+/*,
     "react-bootstrap" :"^2.0.0",
     "bootstrap":"^5.1.3"
+*/
 
   },
   "scripts": {
